[package]
name = "potok_to_snowball"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = { version = "0.26.1", features = ["chrono", "dates"] }
chrono = { version = "0.4.34", features = ["serde", "alloc", "clock", "iana-time-zone", "now", "std"], default-features = false }
clap = { version = "4.5.0", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.2"
file_diff = "1.0.0"
log = "0.4.20"
serde = { version = "1.0.196", features = ["serde_derive"] }

[dev-dependencies]
assert_cmd = { version = "2.0.16", features = ["color", "color-auto"] }
predicates = "3.1.3"
